[tool.poetry]
name = "fastapi_twt_tools"
version = "0.1.0"
description = ""
authors = ["piotr <upsol@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
twt-tools = {git = "https://github.com/upsole/twt_tools"}
fastapi = "^0.79.0"
python-dotenv = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
